force-app/main/default/objects/Cloud_News__e/Cloud_News__e.object-meta.xml
<CustomObject>
    <description
  >Cloud news events deliver news at your fingertips (Cloud News イベントで簡単にニュースを配信)</description>
    <label>Cloud News</label>
</CustomObject>