force-app/main/default/objects/Cloud_News__e/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>場所</label>
    <length>100</length>
    <type>Text</type>
</CustomField>