force-app/main/default/objects/Cloud_News__e/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>緊急</label>
    <type>Checkbox</type>
</CustomField>